# c-nn

./: .gitignore  CMakeLists.txt  main.c  massif.out.7312
include/: ann.h  dataFrame.h  dataframe.h  filehelper.h  networkMath.h
script/: benchmark_classifier.py  create_dataset.py
src/: ann.c  dataFrame.c  dataframe.c  fileHelper.c  filehelper.c  networkMath.c
